<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".add_contact">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/contact_name"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        android:text="@string/change_language"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/add_contact_btn"
        app:layout_constraintStart_toStartOf="@+id/add_contact_btn"
        app:layout_constraintTop_toBottomOf="@+id/add_contact_btn" />

    <EditText
        android:id="@+id/tv_contact_name"
        android:layout_width="match_parent"
        android:paddingStart="20dp"
        android:layout_height="50dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/button_background"
        android:hint="@string/enter_contact_name"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/phone_number"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_contact_name"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@+id/tv_contact_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_contact_name" />

    <EditText
        android:id="@+id/tv_contact_number"
        android:layout_width="match_parent"
        android:paddingStart="20dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"
        android:hint="@string/enter_contact_number"
        android:inputType="phone"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/add_contact_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/button_background"
        android:elevation="4dp"
        android:text="@string/add_contact"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_contact_number" />

    <ImageButton
        android:id="@+id/eg_img_btn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/eg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView39"
        app:layout_constraintVertical_bias="0.571" />

    <ImageButton
        android:id="@+id/america_img_btn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/english"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView39"
        app:layout_constraintVertical_bias="0.571" />


</androidx.constraintlayout.widget.ConstraintLayout>
